<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/item_navigation_drawer_jobs"
            android:icon="@drawable/logo"
            android:title="@string/jobs_menu" />
        <item
            android:id="@+id/item_navigation_drawer_reload"
            android:icon="@drawable/ic_action_reload"
            android:title="@string/reload" />
    </group>

    <item android:title="@string/sub_header_title">
        <menu>
            <item
                android:id="@+id/item_navigation_drawer_post"
                android:icon="@drawable/ic_action_post"
                android:title="@string/post_job" />
        </menu>
    </item>

</menu>